--- a/resources/EZ_Lights.conf
+++ b/resources/EZ_Lights.conf
@@ -1,5 +1,8 @@
-#Separate fields with tabs
-# Device Name	Auto Time On	Auto Time Off
-Device 1
-Device 2
-Device 3
+
+#Fields are read sequentially so place-holders must exist for fields you wish to skip. For undesired time values, use 'none'
+#Times must be specified in 24-hour format
+#
+# Device Name ,House Code, Device Code,Auto Time On ,Auto Time Off
+Device 1, a, 1, 0830, none
+Device 2, a, 2, none, 2200
+Device 3, a, 3, none, none
