Complete phase 1 functionality

--- a/resources/EZ_Lights.conf
+++ b/resources/EZ_Lights.conf
@@ -1,8 +1,9 @@
 
 #Fields are read sequentially so place-holders must exist for fields you wish to skip. For undesired time values, use 'none'
 #Times must be specified in 24-hour format
+#House codes must be upper case
 #
 # Device Name ,House Code, Device Code,Auto Time On ,Auto Time Off
-Device 1, a, 1, 0830, none
-Device 2, a, 2, none, 2200
-Device 3, a, 3, none, none
+Sydney's Lamp, A, 1, 0101, 0102
+Daddy's Lamp, A, 2, none, 2200
+Device 3, A, 3, none, none
