--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -2,4 +2,8 @@ log4j.rootLogger=debug, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%5p] %d{mm:ss} (%F:%M:%L)%n%m%n%n
+log4j.appender.stdout.layout.ConversionPattern=[%5p] %d{hh:mm:ss} (%F:%M:%L)%m%n
+
+
+log4j.logger.ez_lights.device=info
+log4j.logger.transceiver.cm19a=debug
